[package]
name = "padlock-accumulator"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.26"
blake3 = "1.0.0"
anyhow = "1.0.43"
kvdb = "0.10.0"
serde = { version = "1.0.129", features=["derive"] }
bitvec = { version = "^0.18", features=["serde"] }
bincode = "1.3.3"
log = "0.4.14"
env_logger = "0.9.0"

[dev-dependencies]
rand = "0.8.4"
kvdb-memorydb = "0.10.0"
